package com.renren.tripod;

message ListOrHashValue {
  repeated string values = 1;
}
